--- a/gtpb_clientside/WEB-INF/templates/gui/import/2_import_details.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/import/2_import_details.vm
@@ -96,7 +96,7 @@
 </tr>
 #foreach($field in $sessionTable.getFields())
   #set($sequenceFieldNames = "")
-  #if(($field.getClass().getSimpleName() == "SequenceFieldDefn") && (! $field.equals($sessionTable.getPrimaryKey())))
+  #if(($field.getClass().getSimpleName() == "SequenceFieldDefn") && (! $field.isPrimaryKey()))
 	#set($sequenceFieldNames = "$sequenceFieldNames $field")
 	#set($importSequenceFields = true)
   #end 
