--- a/gtpb_clientside/WEB-INF/templates/gui/resources/picker/relation_display_value.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/resources/picker/relation_display_value.vm
@@ -25,7 +25,7 @@
 ##Check it out
 
 #set($displayField = $pickerField.getDisplayField())
-#if($displayField.equals($displayField.getTableContainingField().getPrimaryKey()))
+#if($displayField.isPrimaryKey())
   #set($displayValue = $pickerField.getDisplayValue($pickerValue))##
 #else
   #set($displayValue = $pickerValue)##
