--- a/gtpb_clientside/WEB-INF/templates/gui/resources/picker/report_body.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/resources/picker/report_body.vm
@@ -37,7 +37,7 @@
 		  	#set($displayValue=$dataRowFields.get($displayField).getDisplayValue())
 		  			#set($expando=[['keyValue',$keyValue],['displayValue',$displayValue]])
 		  #foreach($field in $reportBaseFields)
-		    #if ((!$field.getTableContainingField().getPrimaryKey().equals($field)) || ($sessionContext == "SYSADMIN"))
+		    #if ((!$field.isPrimaryKey()) || ($sessionContext == "SYSADMIN"))
 			      #set($dataRowField = $dataRowFields.get($field))
 			      #set($success=$row.add($dataRowField.getDisplayValue()))
 			      #set($success=$colours.add($dataRowField.getStandardDevHexColour()))
