--- a/gtpb_clientside/WEB-INF/templates/gui/mobile/related_table_data_row.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/mobile/related_table_data_row.vm
@@ -15,7 +15,7 @@
 ##  You should have received a copy of the GNU General Public License
 ##  along with agileBase.  If not, see <http://www.gnu.org/licenses/>.
 ##
-#if (! $field.getTableContainingField().getPrimaryKey().equals($field)) ## remove to show primary key field
+#if (!$field.isPrimaryKey()) ## remove to show primary key field
   #if($address)
 	#if($address.size() > 0)
 	  #if($address.firstKey().equals($field)) #set($partOfAddress = true) #end
