--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/summary.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/summary.vm
@@ -198,7 +198,7 @@ function fSubmitFunction() {
     #if ($category == "RELATION") ## added to show display field name for relation fields
       	<option value="$reportField.getInternalFieldName()">$reportField.getBaseField().getRelatedTable().getTableName(): $reportField.getBaseField().getDisplayField()</option>
     #else
-			#if(!($baseField.equals($baseField.getTableContainingField().getPrimaryKey())))
+			#if(!$baseField.isPrimaryKey())
 				## Dont't allow grouping by text without lookups
 				## unless the field is from a different table.
 				## Don't allow files in any situation
@@ -245,7 +245,7 @@ function fSubmitFunction() {
 		  <option value="" selected>-- please choose a field --</option>
             #foreach($reportField in $report.getReportFields())
             	#set($baseField = $reportField.getBaseField())
-            	#if($baseField.equals($baseField.getTableContainingField().getPrimaryKey()))
+            	#if($baseField.isPrimaryKey())
                 <option value="$reportField.getInternalFieldName()">each '$baseField.getTableContainingField()' record</option>
 			#else
                 <option value="$reportField.getInternalFieldName()">$reportField.getFieldName()</option>
