--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/table_data_row.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/table_data_row.vm
@@ -20,7 +20,7 @@
 #set($loggedInUser = $view.getLoggedInUser())
 #set($contractedSections = $loggedInUser.getContractedSections())
 #set($internalFieldName = $field.getInternalFieldName())
-#if (! $field.getTableContainingField().getPrimaryKey().equals($field)) ## remove to show primary key field
+#if (!$field.isPrimaryKey()) ## remove to show primary key field
   #if($address)
 	#if($address.size() > 0)
 	  #if($address.firstKey().equals($field)) #set($partOfAddress = true) #end
