--- a/gtpb_clientside/WEB-INF/templates/gui/resources/modalFramework/report.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/resources/modalFramework/report.vm
@@ -19,7 +19,7 @@
 #set($fields=[])
 	#set($reportBaseFields = $pickerReport.getReportBaseFields())
 	#foreach ($field in $reportBaseFields)
-		  #if ( (!$field.getTableContainingField().getPrimaryKey().equals($field)) || ($sessionContext == "SYSADMIN"))
+		  #if ( (!$field.isPrimaryKey()) || ($sessionContext == "SYSADMIN"))
 		##    #if ($field.getFieldCategory().getDescription().equals("Relation")) ## added to show display field name for relation fields
 ##      #set($relationFieldDisplay = "$field.getRelatedTable().getTableName(): $field.getDisplayField().getFieldName()")
 ##      #set($success=$fields.add([$field.getInternalFieldName(),$relationFieldDisplay]))		 ## added to show display field name for relation fields
