--- a/gtpb_clientside/WEB-INF/templates/gui/pane2/pane2.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/pane2/pane2.vm
@@ -265,7 +265,11 @@
         #parse("gui/pane2/pane2_head.vm")
       </thead>
       <tbody name=reportBody id=reportBody class="selectable">
-        #parse("gui/pane2/pane2_body.vm")
+        #if($sessionReport.getReportStyle() == "SECTIONED")
+          #parse("gui/pane2/sectioned_body.vm")
+        #else
+          #parse("gui/pane2/pane2_body.vm")
+        #end
 		  </tbody>
     </table>
 	  #if($mobile_device)
