--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/report_data.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/report_data.vm
@@ -21,6 +21,7 @@
 ## $rowLimit
 ## otherwise the session details will be used
 #set($mobile_device = $sessionData.getCustomBoolean("mobile_device"))##
+#set($sectionedReport = ($sessionReport.getReportStyle() == "SECTIONED"))
 ## data from a report for pane2
 #set($resource_folder='tables')##
 #set($sessionContext = $sessionData.getContext().toString())##
@@ -39,7 +40,7 @@
   #set($fields=[])##
   #set($reportBaseFields = $sessionReport.getReportBaseFields())##
   #foreach ($field in $reportBaseFields)##
-    #if( (!$field.isPrimaryKey()) || ($sessionContext == "SYSADMIN"))##
+    #if( (!$field.isPrimaryKey()) || ($sessionContext == "SYSADMIN") || $sectionedReport)##
 	  #set($success=$fields.add([$field.getInternalFieldName(),$field]))##
 	#end ## added to show display field name for relation fields
   #end##
@@ -58,7 +59,6 @@
   #else
     #set($datarows = $view.getReportDataRows())##
   #end
-  #set($sectionedReport = ($sessionReport.getReportStyle() == "SECTIONED"))
   #set($data=[])##
   #set($dataCapacity = $datarows.size() + 1)##
   #set($success = $data.ensureCapacity($dataCapacity))##
