Sectioned style debug

--- a/gtpb_clientside/WEB-INF/templates/gui/pane2/sectioned_body.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/pane2/sectioned_body.vm
@@ -72,8 +72,7 @@
     #set($cellNumber = $foreach.count - 1)
     #set($field = $fields.get($cellNumber).get(1))
     #set($table = $field.getTableContainingField())
-    $viewTools.log("headingTables.contains($table): $headingTables.contains($table)")
-    $viewTools.log("$field field.isPrimaryKey(): $field.isPrimaryKey()")
+    $viewTools.log("$field isPrimaryKey(): $field.isPrimaryKey()")
     #if($headingTables.contains($table) && $field.isPrimaryKey())
       #if($cell != $lastValues.get($cellNumber))
         #set($headingLevel = $headingMap.get($table))
