--- a/gtpb_clientside/WEB-INF/templates/gui/pane2/sectioned_body.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/pane2/sectioned_body.vm
@@ -90,7 +90,7 @@
             #foreach($testCell in $thisValues)
               #set($testCellNumber = $foreach.count - 1)
               #set($field = $fields.get($testCellNumber).get(1))
-              #if((!$field.isPrimaryKey()) && $field.getTableContainingField().equals($table))
+              #if((!$field.isPrimaryKey()) && $field.getTableContainingField().equals($table) && ($field.getClass().getSimpleName() != "CalculationFieldDefn"))
                 $field: $testCell - 
               #end
             #end
@@ -113,7 +113,7 @@
     #foreach($cell in $thisValues)
       #set($cellNumber = $foreach.count - 1)
       #set($field = $fields.get($cellNumber).get(1))
-      #if($detailTables.contains($field.getTableContainingField()) && (!$field.isPrimaryKey()))
+      #if(($detailTables.contains($field.getTableContainingField()) || ($field.getClass().getSimpleName() != "CalculationFieldDefn")) && (!$field.isPrimaryKey()))
         #set($rightAlign = false)
         #set($fieldCategory = $field.getFieldCategory().toString())
         #if(($fieldCategory == "NUMBER") || ($fieldCategory == "SEQUENCE"))
