Sectioned report: calcs always part of detail

--- a/gtpb_clientside/WEB-INF/templates/gui/pane2/sectioned_body.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/pane2/sectioned_body.vm
@@ -48,7 +48,7 @@
 #end
 #set($headingTables = $headingMap.keySet())
 ## Any tables which aren't for the heading must be for the detail
-#set($numDetailsFields = 0)
+#set($numDetailFields = 0)
 #foreach($reportField in $sessionReport.getReportFields())
   #set($table = $reportField.getBaseField().getTableContainingField())
   #if(!$headingTables.contains($table))
