--- a/gtpb_clientside/styles/report.css
+++ b/gtpb_clientside/styles/report.css
@@ -146,7 +146,7 @@ table#reportData tr.h1 td {
   font-weight: bold;
   border-bottom: 1px solid black;
   height: 3em;
-  vertical-align: bottom;
+  vertical-align: middle;
   background-color: #f8f8f8;
 }
 
@@ -154,7 +154,7 @@ table#reportData tr.h2 td {
 	font-weight: bold;
   border-bottom: 1px solid gray;
   height: 3em;
-  vertical-align: bottom;
+  vertical-align: middle;
   background-color: #f8f8f8;
 }
 					 
