Calcs can be in detail or heading

--- a/gtpb_clientside/WEB-INF/templates/gui/pane2/sectioned_body.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/pane2/sectioned_body.vm
@@ -56,7 +56,7 @@
     #foreach($field in $reportField.getFieldsUsed())
       #set($table = $field.getTableContainingField())
       #if(!$headingTables.contains($table))
-        #set($success = $detailCalculations.add($reportField))
+        #set($success = $detailCalculations.put($reportField, 1))
       #end
     #end
   #end
@@ -66,7 +66,7 @@
   #set($table = $reportField.getBaseField().getTableContainingField())
   #if(!$headingTables.contains($table))
     #set($success = $detailMap.put($table, true))
-    #if(($reportField.getClass().getSimpleName() != "ReportCalcFieldDefn") || ($detailCalculations.contains($reportField)))
+    #if(($reportField.getClass().getSimpleName() != "ReportCalcFieldDefn") || ($detailCalculations.keySet().contains($reportField)))
       #set($numDetailFields = $numDetailFields + 1)
     #end
   #end
@@ -108,7 +108,7 @@
               #set($field = $fields.get($testCellNumber).get(1))
               #if($field.getClass().getSimpleName() == "CalculationFieldDefn")
                 #set($reportCalcField = $field.getReportCalcField())
-                #if(!$detailCalculations.contains($reportCalcField))
+                #if(!$detailCalculations.keySet().contains($reportCalcField))
                   | $field = $testCell | &nbsp;&nbsp;&nbsp;&nbsp;
                 #end
               #elseif((!$field.isPrimaryKey()) && $field.getTableContainingField().equals($table))
@@ -134,7 +134,7 @@
     #foreach($cell in $thisValues)
       #set($cellNumber = $foreach.count - 1)
       #set($field = $fields.get($cellNumber).get(1))
-      #if(($detailTables.contains($field.getTableContainingField()) || ($detailCalculations.contains($field.getReportCalcField()))) && (!$field.isPrimaryKey()))
+      #if(($detailTables.contains($field.getTableContainingField()) || ($detailCalculations.keySet().contains($field.getReportCalcField()))) && (!$field.isPrimaryKey()))
         #set($rightAlign = false)
         #set($fieldCategory = $field.getFieldCategory().toString())
         #if(($fieldCategory == "NUMBER") || ($fieldCategory == "SEQUENCE"))
