--- a/gtpb_clientside/WEB-INF/templates/gui/pane2/sectioned_body.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/pane2/sectioned_body.vm
@@ -53,10 +53,12 @@
 ## They will belong to detail if they include at least one table that isn't in the heading
 #foreach($reportField in $sessionReport.getReportFields())
   #if($reportField.getClass().getSimpleName() == "ReportCalcFieldDefn")
-    #foreach($field in $reportField.getFieldsUsed())
-      #set($table = $field.getTableContainingField())
-      #if(!$headingTables.keySet().contains($table))
+    <p>Calculation found: $reportField<p>
+    #foreach($fieldUsed in $reportField.getFieldsUsed())
+      #set($table = $fieldUsed.getTableContainingField())
+      #if(!$headingTables.contains($table))
         #set($success = $detailCalculations.put($reportField, 1))
+        #break
       #end
     #end
   #end
